<resources>
    <string name="app_name">Learning Management System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_space">My Space</string>
    <string name="menu_my_profile_parent">My profile</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_parent_about_us">About us</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_logout">Logout</string>

    <!--For internet-->
    <string name="oops_connect_your_internet">Oops! Connect Your Internet</string>


    <!--For Teacher navigation drawer-->
    <string name="menu_teacher_my_space">My Space</string>
    <string name="menu_teacher_contact_us">Contact us</string>
    <string name="menu_teacher_blog">Blog</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_teacher_faq">FAQ</string>
    <string name="menu_teacher_logout">Logout</string>


    <!--Teacher Login-->
    <string name="teacher_login">Teacher Login</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="login">Login</string>
    <string name="login_macc">If you Don"'"t have an account ?</string>
    <string name="register_now">Register Now</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_succ_message">Login Successfully...</string>
    <!--For forget password Teacher-->
    <string name="forgot_password">Forget password</string>

    <!--For Teacher register-->
    <string name="teacher_register">Teacher Registration</string>
    <string name="enter_email_address_hint">Enter email address</string>
    <string name="enter_full_name_hint">Enter full name</string>
    <string name="enter_skype_id_hint">Enter Skype Id</string>
    <string name="enter_subject_name_hint">Enter subject name</string>
    <string name="upload_resume">Upload resume</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="register">Register</string>
    <string name="terms_and_condition">I agree to terms &amp; conditions</string>
    <string name="teacher_register_succ_message">Teacher Registered successfully...</string>


    <string name="title_activity_teacher_dashboard">TeacherDashboardActivity</string>
    <string name="enter_student_name">Enter student name</string>
    <string name="enter_parent_name">Enter parent name</string>
    <string name="submit">Submit</string>


    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--For parent register-->
    <string name="parent_login">Parent Login</string>
    <string name="parent_register">Parent Registration</string>
    <string name="parent_register_succ_message">Parent Registered successfully...</string>

</resources>
