<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_parent_my_space"
            android:title="@string/menu_my_space" />
        <item
            android:id="@+id/myPofileParentFragment"
            android:title="@string/menu_my_profile_parent" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_blog"
            android:title="@string/menu_blog" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/menu_parent_about_us"/>
        <item
            android:id="@+id/nav_faq"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
