<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/teacherMySpaceFragment"
            android:title="@string/menu_teacher_my_space" />
        <item
            android:id="@+id/myProfileTeacherFragment"
            android:title="@string/menu_my_profile_parent" />
        <item
            android:id="@+id/nav_teacher_contact_us"
            android:title="@string/menu_teacher_contact_us" />
        <item
            android:id="@+id/nav_teacher_blog"
            android:title="@string/menu_teacher_blog" />
        <item
            android:id="@+id/nav_teacher_about_us"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_teacher_faq"
            android:title="@string/menu_teacher_faq" />
        <item
            android:id="@+id/nav_teacher_logout"
            android:title="@string/menu_teacher_logout" />
    </group>
</menu>
