<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_parent_my_space">

    <fragment
        android:id="@+id/nav_parent_my_space"
        android:name="com.learningmanagement.parent_account.myspace.MySpaceParentFragment"
        android:label="@string/menu_my_space"
        tools:layout="@layout/fragment_my_space_parent" />

    <fragment
        android:id="@+id/myPofileParentFragment"
        android:name="com.learningmanagement.parent_account.my_profile_parent.MyPofileParentFragment"
        android:label="@string/menu_my_profile_parent"
        tools:layout="@layout/fragment_my_pofile_parent" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.learningmanagement.parent_account.contact_us.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_blog"
        android:name="com.learningmanagement.parent_account.blog.BlogFragment"
        android:label="@string/menu_blog"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.learningmanagement.parent_account.tools.AboutUsFragment"
        android:label="@string/menu_parent_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.learningmanagement.parent_account.share.FAQFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />

</navigation>