<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".parent_account.activity.LoginParentActivity">

    <include
        android:id="@+id/inHeader"
        layout="@layout/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImg"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:src="@drawable/logo"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/custom_bg"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_username_hint"
        android:inputType="text"
        android:paddingLeft="@dimen/_8sdp"
        android:singleLine="true"
        android:textColor="@color/colorGray_1"
        android:textColorHint="@color/colorGray_hint"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/custom_bg"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_password_hint"
        android:inputType="numberPassword"
        android:paddingLeft="@dimen/_8sdp"
        android:singleLine="true"
        android:textColor="@color/colorGray_1"
        android:textColorHint="@color/colorGray_hint"
        android:textSize="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:background="@drawable/button_black"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"/>

    <RelativeLayout
        android:id="@+id/rLayoutRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <TextView
            android:id="@+id/txtViewAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/login_macc"
            android:textColor="@color/colorGray_1"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txtViewAcc"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_11sdp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/forget_password"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rLayoutRegister"/>

</androidx.constraintlayout.widget.ConstraintLayout>