<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ui.activity.TeacherRegisterActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/inHeader"
                    layout="@layout/header" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/inHeader"
                    android:layout_margin="@dimen/_20sdp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/custom_bg"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/enter_email_address_hint"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorGray_1"
                        android:textColorHint="@color/colorGray_hint"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtFullName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/custom_bg"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/enter_full_name_hint"
                        android:inputType="text"
                        android:paddingLeft="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorGray_1"
                        android:textColorHint="@color/colorGray_hint"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtSkypeId"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/custom_bg"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/enter_skype_id_hint"
                        android:inputType="text"
                        android:paddingLeft="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorGray_1"
                        android:textColorHint="@color/colorGray_hint"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtSubject"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/custom_bg"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/enter_subject_name_hint"
                        android:inputType="text"
                        android:paddingLeft="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorGray_1"
                        android:textColorHint="@color/colorGray_hint"
                        android:textSize="@dimen/_12sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".4">

                            <Button
                                android:id="@+id/btnUploadResume"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40sdp"
                                android:background="@drawable/button_black"
                                android:fontFamily="@font/roboto_bold"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/upload_resume"
                                android:textAllCaps="false"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/_12sdp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".6">

                            <TextView
                                android:id="@+id/edtUploadResume"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:paddingLeft="@dimen/_8sdp"
                                android:text="@string/no_file_chosen"
                                android:textColor="@color/colorGray_1"
                                android:textSize="@dimen/_12sdp" />
                        </LinearLayout>
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkTermAndCondition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/terms_and_condition"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp" />

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginLeft="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_50sdp"
                        android:background="@drawable/button_black"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>